[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokeydokey"
version = "1.0.2"
description = "Create random identifiers using a fixed number of non-overlapping LLM tokens."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []
keywords = ["tokens", "identifiers", "tiktoken", "llm", "random"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[dependency-groups]
dev = ["pytest>=7.4", "mypy>=1.0", "tiktoken>=0.5.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/tokeydokey"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
strict = true
